--- a/site1/index.html
+++ b/site1/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header center">
         <div class="header__left">
-            <a class="logo" href=""><img class="logo__img" src="img/logo.png" alt="logo">BRAN<span id="d">D</span></a>
+            <a class="logo" href="index.html"><img class="logo__img" src="img/logo.png" alt="logo">BRAN<span id="d">D</span></a>
             <form class="header__form browse" action="#">
                 <div class="browse">Browse <img src="img/dn.png" alt="dn"></div>
                 <input class="input" type="text" placeholder="Search for item">
